@@ -299,8 +299,9 @@ Boot parameters to specify:
 <para>
 
 Note that <filename>preseed/url</filename> can be shortened to just
-<filename>url</filename> and <filename>preseed/file</filename> to just
-<filename>file</filename> when they are passed as boot parameters.
+<filename>url</filename>, <filename>preseed/file</filename> to just
+<filename>file</filename> and <filename>preseed/file/checksum</filename> to just
+<filename>preseed-md5</filename> when they are passed as boot parameters.
 
 </para>
   </sect2>
@@ -776,7 +777,8 @@ be known to the &d-i; for the selected keyboard architecture.
 <informalexample role="example"><screen>
 # Keyboard selection.
 #d-i console-tools/archs select at
-d-i console-keymaps-at/keymap select us
+# keymap is an alias for console-keymaps-at
+d-i keymap select us
 d-i keyboard-configuration/xkb-keymap select us
 # Example for a different keyboard architecture
 #d-i console-keymaps-usb/keymap select mac-usb-us
