@@ -18,6 +18,10 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * The text frontend is available on most default install media.  Adjust
     the Boot Parameters section to say so.
 
+  [ Christian Perrier ]
+  * Document preseed-md5 and keymap preseed aliases
+    Closes: #621825, #621824
+
  -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100
 
 installation-guide (20110122) unstable; urgency=low
